[package]
name = "aquadoggo_android"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
aquadoggo = { git = "https://github.com/p2panda/aquadoggo.git", branch = "android-test" }
log = "0.4.17"
ndk-glue = "0.7.0"
tokio = { version = "^1.20.1", features = [ "macros", "net", "rt", "rt-multi-thread", "sync", "time" ] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "^0.7.0", features = [ "logger" ] }

[package.metadata.android]

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"
